--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+	.home {
+		background: linear-gradient(180deg, rgba(30, 30, 30, 0.6) 0%, rgba(217, 217, 217, 0) 100%, rgba(0, 0, 0, 0) 100%);
+	}
+}
