--- a/src/index.css
+++ b/src/index.css
@@ -3,17 +3,22 @@
 @tailwind utilities;
 
 @layer base {
-	body{
+	body {
 		overflow-x: hidden;
 	}
 }
 
 @layer components {
-
 	@import url('https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap');
-	
+
 	.home {
 		background: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.3) 15%, rgba(0, 0, 0, 0) 100%);
+	}
+
+	.home-text > span:hover {
+		color: rgb(161 98 7);
+		font-size: 120%;
+		transition: 0.2s;
 	}
 
 	.text-stroke {
@@ -22,7 +27,7 @@
 		-webkit-text-stroke-color: #424242;
 	}
 
-	.work-bg-gradient{
-		background: linear-gradient(180deg, #BC987E 0%, rgba(133, 94, 66, 0.8) 60%, rgba(188, 152, 126, 0.28) 100%);
+	.work-bg-gradient {
+		background: linear-gradient(180deg, #bc987e 0%, rgba(133, 94, 66, 0.8) 60%, rgba(188, 152, 126, 0.28) 100%);
 	}
 }
