--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,13 @@
 		background: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.3) 15%, rgba(0, 0, 0, 0) 100%);
 	}
 
+	.home-text > span{
+		transition: 0.5s;
+	}
+
 	.home-text > span:hover {
 		color: rgb(161 98 7);
 		font-size: 120%;
-		transition: 0.5s;
 	}
 
 	.text-stroke {
