--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@
 		background: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.3) 15%, rgba(0, 0, 0, 0) 100%);
 	}
 
+	img{
+		user-drag:none;
+	}
+
 	.home-text > span{
 		transition: 0.5s;
 	}
